--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,3 +5,21 @@ img{
     border: 1px solid black;
 
 }
+a{
+    cursor: default;
+}
+.EncounterMonsterToevoegen{
+    background-color: #4CAF50;
+    border: 2px solid black;
+    color: white;
+    padding: 15px 5px;
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 20px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    margin-top: 5px;
+
+}
