--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 img{
     width: 128px;
     height: 128px;
@@ -21,5 +25,5 @@ a{
     font-size: 16px;
     margin: 4px 2px;
     margin-top: 5px;
-
 }
+
